[package]
name = "bibliothecula"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.1" }
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
error-chain = "0.12.4"
gdk-pixbuf = "*"
glib = "*"
once_cell="*"
pango = "^0"
unicode-segmentation = "1.6.0"
uuid = { version = "0.8.0", features = [ "v5", ] }

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.gdk]
version = "*"

[profile.release]
lto = true
opt-level = "z"
debug = false
codegen-units = 1
