[package]
name = "biblfs"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fuser = "0.7"
fuser = { git = "https://github.com/cberner/fuser.git", rev = "dcc56bb" }
rusqlite = { version = "0.25.3", features = ["time", "blob", "uuid"] }
uuid = { version = "^0.8", features = ["v3", "v4", "v5", "serde"] }
time = "0.2.26"
libc = "0.2.66"
clap = "2.32"
serde = {version = "1.0.102", features=["std", "derive"]}
signal-hook = "0.3.9"
crossbeam-channel = "0.5.1"
